<resources>
    <string name="app_name">CompanyMeetingSchedular</string>
    <string name="prev_text">PREV</string>
    <string name="next_text">NEXT</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="description">Description</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="schedule_company_meeting_text">SCHEDULE COMPANY MEETING</string>
    <string name="schedule_a_meeting_text">SCHEDULE A MEETING</string>
</resources>
